[package]
name = "zbadm-logs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
chrono-humanize = "0.2.2"
regex = "1.8.4"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
